<resources>
    <string name="app_name">Torba Market</string>
    <string name="hint_name">name</string>
    <string name="Register_Tager">Register As tradesman</string>
    <string name="hint_phone">mobile</string>
    <string name="whous">Who us</string>
    <string name="callus">Call us</string>
    <string name="details">You must transfer the amount to the previous account or pay when you buy. </string>
    <string name="myorders">My orders</string>
    <string name="ask">Are you sure you want to confirm and send this request?</string>
    <string name="addto">Add To Shopping Car</string>
    <string name="mobile">... Send a transfer receipt to WhatsApp: 0504548897 /0549925444 to complete your purchase</string>
    <string name="success">Your application registration has been successfully registered</string>
    <string name="load">Your request is being registered</string>
    <string name="lang">English</string>
    <string name="whoustxt"> We are pleased to announce that ..........
We seek through our new ideas and projects to serve the community in an innovative way that contributes to the quality of life of the individual and society through his daily dealings with his requirements and needs easily and conveniently
Turbah Electronic Stores App (Shopping and Delivery)
It is dedicated to the people of Turbah and its environs where it allows shop owners to register as merchants and provide goods to shoppers and we deliver them on their behalf as the application brings shoppers all their needs and requirements and with the push of a button just our customers shopping and purchase in all markets Turbah (supermarkets - pharmacies - restaurants - sweets - perfumery - clothes - Accessories - Mobiles and etc ....) without wasting time and effort in traditional shopping </string>
    <string name="name">name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="delegate">Register as a delegate</string>
    <string name="national_id">National Id</string>
    <string name="Car_Number">Car Number</string>
    <string name="Car_type">Car Type</string>
    <string name="CommercialRecord">Commercial Record</string>
    <string name="mahalname">Shop Name</string>
    <string name="listorders">List Of Orders</string>
    <string name="confirm">Confirm</string>
    <string name="deletemontag">Delete Orders</string>
    <string name="login">Login</string>
    <string name="ignore">Skip</string>
    <string name="date">birth date </string>

    <string name="password">Password</string>
    <string name="allmoney">Cost</string>
    <string name="hint_address">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password </string>
    <string name="text_login">Login</string>
    <string name="text_register">Create account</string>
    <string name="text_not_member">Registration</string>
    <string name="search">Search</string>
    <string name="terms">Terms and Conditions</string>
    <string name="orderdetail">Order Details</string>
    <string name="sh">
    Objective of the application:
1- Touring in an easy electronic environment that allows productive families and allows businesses to grow and prosper.
2 - Help as much as possible by maintaining the economic situation of productive families and help them by offering their products to reach the largest number of people.
3 - contribute to facilitate the sale process for merchants and purchase easily ..

terms of sale :
1- The contract must include two parties, namely the seller and the buyer.
2 - It is required that the seller owns the whole thing sold, until it is delivered to the buyer.
3 - It is required that the thing sold is halal, it is not permissible to trade in nullities.
4 - The price must be known between the parties, provided that the thing sold free of mortgages ..
5 - The seller should be very reasonable.
6. The seller must have a commercial license.

Purchase Terms:
1- Registration information must be correct and accurate in order to complete the purchase successfully.
2- Read the description of the product under the picture ..
3 - Some products do not recover or replace, such as perfumes, care products and open makeup and others ..
    </string>
    <string name="ss">
         Objective of the application:
1- Touring in an easy electronic environment that allows productive families and allows businesses to grow and prosper.
2 - Help as much as possible by maintaining the economic situation of productive families and help them by offering their products to reach the largest number of people.
3 - contribute to facilitate the sale process for merchants and purchase easily
         terms of sale :
1- The contract must include two parties, namely the seller and the buyer.
2 - It is required that the seller owns the whole thing sold, until it is delivered to the buyer.
3 - It is required that the thing sold is halal, it is not permissible to trade in nullities.
4 - The price must be known between the parties, provided that the thing sold free of mortgages
5 - The seller should be very reasonable.
6- The seller must have a commercial license.

    </string>
    <string-array name="account_num">
        <item>
           حراج منوع
           </item>
        <item>
           حراج عقارات
           </item>
        <item>
           حراج مواشي
           </item>
        <item>
           حراج أثاث
           </item>
        <item>
           حراج جوالات
           </item>
        <item>
           حراج ألكترونيات
           </item>
        <item>
           حراج سيارات
           </item>
        <!--<item>-->
        <!--السعودية-->
        <!--</item>-->
        <!--<item>-->
        <!--الكويت-->
        <!--</item>-->
        <!--<item>-->
        <!--عمان-->
        <!--</item>-->

    </string-array>
</resources>
