<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backa"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/sss"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:id="@+id/swtch"
            />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape"
            android:weightSum="4"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="4"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"

                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:gravity="center"
            android:id="@+id/terms"
            android:textStyle="bold"
            android:textSize="19dp"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"

            android:textColor="#ffffff"
            android:background="@drawable/shape2"
            android:text="@string/text_login" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/textViewLinkRegister"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/shape4"

            android:textColor="#ffffff"

            android:text="@string/text_not_member"
           />
</LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonbb"
            android:layout_width="wrap_content"

            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textColor="#ffffff"
            android:background="@drawable/shape3"
            android:text="@string/delegate" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonbre"
            android:layout_width="wrap_content"

            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textColor="#ffffff"
            android:background="@drawable/shape3"
            android:text="@string/Register_Tager" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>