<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/a"
        android:weightSum="2"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:id="@+id/price"
            android:text="المبلغ الكلى "

            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="المبلغ الكلى : "

            />
    </LinearLayout>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:background="@drawable/asa"
    android:layout_below="@+id/a"
    android:id="@+id/b"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:id="@+id/c"
        android:textSize="15dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/details"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:textSize="15dp"
        android:id="@+id/s"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
            android:text="@string/mobile"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape2"
        android:textColor="#ffffff"
        android:textSize="12dp"
        android:layout_marginTop="15dp"
        android:id="@+id/buttonn"
        android:text="@string/confirm"
        android:layout_below="@+id/s"
        />

</RelativeLayout>