<?xml version="1.0" encoding="utf-8"?>


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backk"

            android:layoutDirection="ltr">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:id="@+id/swtch"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_power_settings_new_black_24dp"
            android:id="@+id/logout"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/app_name"

            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview2"
                        android:layout_width="match_parent"


                        android:layout_height="0dp"
                        android:layout_below="@+id/img"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="3"
                        android:background="@drawable/shape"

                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:scrollbars="vertical"
                        app:reverseLayout="true">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.75">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <EditText
                        android:id="@+id/search_bar"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="4.25"
                        android:hint="@string/search"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp" />

                    <ImageView
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".75"

                        android:background="@drawable/ic_search_black_24dp" />

                </LinearLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView

                android:id="@+id/recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"

                android:layout_below="@+id/vie"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"

                android:layout_weight="2.75"
                android:padding="10dp"
                android:scrollbars="vertical"
                app:reverseLayout="true">

            </android.support.v7.widget.RecyclerView>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle"
                android:id="@+id/a"
                android:layout_gravity="right"

                app:rippleColor="@color/colorPrimaryDark"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/offer"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/sale" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/whous"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight=".8"
                    android:background="@drawable/shape2"
                    android:gravity="center"
                    android:text="@string/whous"
                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/callus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight=".9"
                    android:background="@drawable/shape2"
                    android:gravity="center"
                    android:text="@string/callus"
                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/myorder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1.3"
                    android:background="@drawable/shape2"
                    android:gravity="center"
                    android:text="@string/myorders"


                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_subject"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:visibility="visible" />
        </RelativeLayout>


